--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="w3-quarter cont_box">
 <!===================================>      
       <!--Sky-->
-      <a href="D:/Pragramacion/A%20-Practicas/MyTravels/paginas/sky/index.html" target="_blank" class="w3-quarter-opacity" ><img src="img/firstline/img002.jpg" style="width:100%" alt="Sky"></a>
+      <a href="./paginas/sky/index.html" target="_blank" class="w3-quarter-opacity" ><img src="img/firstline/img002.jpg" style="width:100%" alt="Sky"></a>
 <!===================================>      
       <!--None-->
       <img  src="img/firstline/img009.jpg" style="width:100%" alt="None">
@@ -76,7 +76,7 @@
       <img src="img/firstline/img009.jpg" style="width:100%" alt="None">
 <!===================================>
       <!--Mar-->
-      <a href="D:/Pragramacion/A%20-Practicas/MyTravels/paginas/mar/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/secondline/img010.jpg" style="width:100%" alt="Mar"></a>
+      <a href="./paginas/mar/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/secondline/img010.jpg" style="width:100%" alt="Mar"></a>
 <!===================================>      
       <!--None-->
       <img src="img/firstline/img009.jpg" style="width:100%" alt="None">
@@ -85,13 +85,13 @@
     <div class="w3-quarter">
 <!===================================>      
       <!--Paisaje-->
-      <a href="D:/Pragramacion/A%20-Practicas/MyTravels/paginas/paisajes/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/thirdline/img011.jpg" style="width:100%" alt="Paisaje"></a>
+      <a href="./paginas/paisajes/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/thirdline/img011.jpg" style="width:100%" alt="Paisaje"></a>
 <!===================================>
       <!--None-->
       <img src="img/firstline/img009.jpg" style="width:100%" alt="None">
 <!===================================>      
       <!--Estatuas-->
-      <a href="D:/Pragramacion/A%20-Practicas/MyTravels/paginas/estatuas/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/secondline/img013.jpg" style="width:100%" alt="Estatuas"></a>
+      <a href="./paginas/estatuas/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/secondline/img013.jpg" style="width:100%" alt="Estatuas"></a>
    </div>
 
     <div class="w3-quarter">
@@ -100,7 +100,7 @@
       <img src="img/firstline/img009.jpg" style="width:100%" alt="None">
 <!===================================>
       <!--Random-->
-      <a href="D:/Pragramacion/A%20-Practicas/MyTravels/paginas/random/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/fourthline/img016.jpg" style="width:100%" alt="Random"></a>
+      <a href="./paginas/random/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/fourthline/img016.jpg" style="width:100%" alt="Random"></a>
 <!===================================>      
       <!--None-->
       <img src="img/firstline/img009.jpg" style="width:100%" alt="None">
