--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <img  src="img/firstline/img009.jpg" style="width:100%" alt="None">
 <!===================================>
       <!--City-->
-      <a href="D:/Pragramacion/A%20-Practicas/MyTravels/paginas/city/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/firstline/img012.jpg" style="width:100%" alt="City"></a>
+      <a href="./paginas/city/index.html" target="_blank" class="w3-quarter-opacity"><img src="img/firstline/img012.jpg" style="width:100%" alt="City"></a>
    </div>
     
    <div class="w3-quarter">
